src/test/deca/context/invalid/class/cast/absent_class.deca
// Description:
//    Cast to an undefined class
//
// Resultats:
//    Undefined class A

{
	int b;
	int a = (A)(b);
}
